--- a/v1.21.4.md
+++ b/v1.21.4.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.4
 
 The release notes have been generated for the commit range
-[v1.21.3...c9f28e4](https://github.com/cri-o/cri-o/compare/v1.21.3...c9f28e4dec2e3f7855d7b3a345e5e5a01f7e5933) on Tue, 21 Dec 2021 18:13:29 UTC.
+[v1.21.3...91c3cb8](https://github.com/cri-o/cri-o/compare/v1.21.3...91c3cb87c81c615b1667e5d06549674af8095267) on Tue, 04 Jan 2022 23:38:54 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c9f28e4dec2e3f7855d7b3a345e5e5a01f7e5933.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c9f28e4dec2e3f7855d7b3a345e5e5a01f7e5933.tar.gz)
-- [cri-o.arm64.c9f28e4dec2e3f7855d7b3a345e5e5a01f7e5933.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c9f28e4dec2e3f7855d7b3a345e5e5a01f7e5933.tar.gz)
+- [cri-o.amd64.91c3cb87c81c615b1667e5d06549674af8095267.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.91c3cb87c81c615b1667e5d06549674af8095267.tar.gz)
+- [cri-o.arm64.91c3cb87c81c615b1667e5d06549674af8095267.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.91c3cb87c81c615b1667e5d06549674af8095267.tar.gz)
 
 ## Changelog since v1.21.3
 
@@ -35,6 +35,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5389](https://github.com/cri-o/cri-o/pull/5389), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5266](https://github.com/cri-o/cri-o/pull/5266), [@saschagrunert](https://github.com/saschagrunert))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5436](https://github.com/cri-o/cri-o/pull/5436), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5502](https://github.com/cri-o/cri-o/pull/5502), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
