Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,21 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...9b7f5ae](https://github.com/cri-o/cri-o/compare/v1.22.0...9b7f5ae815c22a1d754abfbc2890d8d4c10e240d) on Thu, 23 Dec 2021 14:31:30 UTC.
+[v1.22.0...cfc2690](https://github.com/cri-o/cri-o/compare/v1.22.0...cfc2690705ee54c8cad8d5ab7ccb4121536f87f8) on Fri, 07 Jan 2022 23:38:15 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9b7f5ae815c22a1d754abfbc2890d8d4c10e240d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9b7f5ae815c22a1d754abfbc2890d8d4c10e240d.tar.gz)
-- [cri-o.arm64.9b7f5ae815c22a1d754abfbc2890d8d4c10e240d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9b7f5ae815c22a1d754abfbc2890d8d4c10e240d.tar.gz)
+- [cri-o.amd64.cfc2690705ee54c8cad8d5ab7ccb4121536f87f8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.cfc2690705ee54c8cad8d5ab7ccb4121536f87f8.tar.gz)
+- [cri-o.arm64.cfc2690705ee54c8cad8d5ab7ccb4121536f87f8.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.cfc2690705ee54c8cad8d5ab7ccb4121536f87f8.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -43,6 +40,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
@@ -127,7 +127,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containernetworking/plugins: [v0.9.1 → v1.0.1](https://github.com/containernetworking/plugins/compare/v0.9.1...v1.0.1)
 - github.com/containers/buildah: [v1.22.3 → v1.23.1](https://github.com/containers/buildah/compare/v1.22.3...v1.23.1)
 - github.com/containers/common: [v0.43.2 → 161e078](https://github.com/containers/common/compare/v0.43.2...161e078)
-- github.com/containers/image/v5: [v5.15.2 → v5.16.1](https://github.com/containers/image/v5/compare/v5.15.2...v5.16.1)
+- github.com/containers/image/v5: [v5.15.2 → v5.17.0](https://github.com/containers/image/v5/compare/v5.15.2...v5.17.0)
 - github.com/containers/podman/v3: [v3.3.0 → 8bcc086](https://github.com/containers/podman/v3/compare/v3.3.0...8bcc086)
 - github.com/containers/psgo: [v1.5.2 → v1.7.1](https://github.com/containers/psgo/compare/v1.5.2...v1.7.1)
 - github.com/containers/storage: [v1.34.1 → v1.37.0](https://github.com/containers/storage/compare/v1.34.1...v1.37.0)
@@ -135,7 +135,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/coreos/go-iptables: [v0.5.0 → v0.6.0](https://github.com/coreos/go-iptables/compare/v0.5.0...v0.6.0)
 - github.com/creack/pty: [v1.1.15 → v1.1.17](https://github.com/creack/pty/compare/v1.1.15...v1.1.17)
 - github.com/cri-o/ocicni: [4ea5fb8 → b388448](https://github.com/cri-o/ocicni/compare/4ea5fb8...b388448)
-- github.com/docker/docker: [v20.10.8+incompatible → v20.10.9+incompatible](https://github.com/docker/docker/compare/v20.10.8...v20.10.9)
+- github.com/docker/docker: [v20.10.8+incompatible → v20.10.11+incompatible](https://github.com/docker/docker/compare/v20.10.8...v20.10.11)
 - github.com/envoyproxy/go-control-plane: [63b5d3c → cf90f65](https://github.com/envoyproxy/go-control-plane/compare/63b5d3c...cf90f65)
 - github.com/evanphx/json-patch: [v4.11.0+incompatible → v4.12.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.11.0...v4.12.0)
 - github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
@@ -148,6 +148,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/j-keck/arping: [2cf9dc6 → v1.0.2](https://github.com/j-keck/arping/compare/2cf9dc6...v1.0.2)
 - github.com/json-iterator/go: [v1.1.11 → v1.1.12](https://github.com/json-iterator/go/compare/v1.1.11...v1.1.12)
 - github.com/klauspost/compress: [v1.13.4 → v1.13.6](https://github.com/klauspost/compress/compare/v1.13.4...v1.13.6)
+- github.com/manifoldco/promptui: [v0.8.0 → v0.9.0](https://github.com/manifoldco/promptui/compare/v0.8.0...v0.9.0)
 - github.com/mattn/go-isatty: [v0.0.12 → v0.0.14](https://github.com/mattn/go-isatty/compare/v0.0.12...v0.0.14)
 - github.com/mitchellh/mapstructure: [v1.4.1 → v1.4.2](https://github.com/mitchellh/mapstructure/compare/v1.4.1...v1.4.2)
 - github.com/moby/term: [9d4ed18 → 3f7ff69](https://github.com/moby/term/compare/9d4ed18...3f7ff69)
@@ -173,9 +174,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - go.opentelemetry.io/proto/otlp: v0.7.0 → v0.10.0
 - go.uber.org/zap: v1.17.0 → v1.19.0
 - golang.org/x/crypto: 0c34fe9 → 32db794
-- golang.org/x/net: abc4532 → e898025
+- golang.org/x/net: abc4532 → d4b1ae0
 - golang.org/x/oauth2: f6687ab → 2bc19b1
-- golang.org/x/sys: 0f9fa26 → 751e447
+- golang.org/x/sys: 0f9fa26 → 2c5d950
 - golang.org/x/text: v0.3.6 → v0.3.7
 - golang.org/x/tools: v0.1.2 → d4cc65f
 - google.golang.org/api: v0.44.0 → v0.46.0
