--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...c3131de](https://github.com/cri-o/cri-o/compare/v1.22.0...c3131de35a9bdcd2af2a476dd09bbd62a504c614) on Mon, 10 Jan 2022 17:02:16 UTC.
+[v1.22.0...c330270](https://github.com/cri-o/cri-o/compare/v1.22.0...c330270804552acae6a182537ee9ff6b20b07bde) on Mon, 10 Jan 2022 17:18:51 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c3131de35a9bdcd2af2a476dd09bbd62a504c614.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c3131de35a9bdcd2af2a476dd09bbd62a504c614.tar.gz)
-- [cri-o.arm64.c3131de35a9bdcd2af2a476dd09bbd62a504c614.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c3131de35a9bdcd2af2a476dd09bbd62a504c614.tar.gz)
+- [cri-o.amd64.c330270804552acae6a182537ee9ff6b20b07bde.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c330270804552acae6a182537ee9ff6b20b07bde.tar.gz)
+- [cri-o.arm64.c330270804552acae6a182537ee9ff6b20b07bde.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c330270804552acae6a182537ee9ff6b20b07bde.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -156,6 +156,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/onsi/ginkgo: [v1.16.4 → v1.16.5](https://github.com/onsi/ginkgo/compare/v1.16.4...v1.16.5)
 - github.com/onsi/gomega: [v1.16.0 → v1.17.0](https://github.com/onsi/gomega/compare/v1.16.0...v1.17.0)
 - github.com/opencontainers/image-spec: [083f635 → 5ad6f50](https://github.com/opencontainers/image-spec/compare/083f635...5ad6f50)
+- github.com/opencontainers/runc: [v1.0.2 → v1.0.3](https://github.com/opencontainers/runc/compare/v1.0.2...v1.0.3)
 - github.com/opencontainers/selinux: [v1.8.4 → v1.9.1](https://github.com/opencontainers/selinux/compare/v1.8.4...v1.9.1)
 - github.com/prometheus/common: [v0.29.0 → v0.30.0](https://github.com/prometheus/common/compare/v0.29.0...v0.30.0)
 - github.com/prometheus/procfs: [v0.6.0 → v0.7.3](https://github.com/prometheus/procfs/compare/v0.6.0...v0.7.3)
