Update release notes

--- a/v1.20.6.md
+++ b/v1.20.6.md
@@ -12,14 +12,14 @@
 # CRI-O v1.20.6
 
 The release notes have been generated for the commit range
-[v1.20.5...8594c20](https://github.com/cri-o/cri-o/compare/v1.20.5...8594c209918f921d417d1cf2b578d8a90e39953e) on Thu, 16 Dec 2021 10:32:53 UTC.
+[v1.20.5...c2b5bcc](https://github.com/cri-o/cri-o/compare/v1.20.5...c2b5bccdac94c46f737408d657b87afad642ca99) on Mon, 10 Jan 2022 21:36:03 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8594c209918f921d417d1cf2b578d8a90e39953e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8594c209918f921d417d1cf2b578d8a90e39953e.tar.gz)
-- [cri-o.arm64.8594c209918f921d417d1cf2b578d8a90e39953e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8594c209918f921d417d1cf2b578d8a90e39953e.tar.gz)
+- [cri-o.amd64.c2b5bccdac94c46f737408d657b87afad642ca99.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c2b5bccdac94c46f737408d657b87afad642ca99.tar.gz)
+- [cri-o.arm64.c2b5bccdac94c46f737408d657b87afad642ca99.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c2b5bccdac94c46f737408d657b87afad642ca99.tar.gz)
 
 ## Changelog since v1.20.5
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5370](https://github.com/cri-o/cri-o/pull/5370), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5408](https://github.com/cri-o/cri-o/pull/5408), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an issue when a container with a terminal has an exec probe ([#5364](https://github.com/cri-o/cri-o/pull/5364), [@haircommander](https://github.com/haircommander))
+ - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5265](https://github.com/cri-o/cri-o/pull/5265), [@saschagrunert](https://github.com/saschagrunert))
 
 ## Dependencies
 
