Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,21 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...f97e462](https://github.com/cri-o/cri-o/compare/v1.22.0...f97e462d3d0d2be14071ed6ad4456bfb59ca2787) on Wed, 12 Jan 2022 08:39:08 UTC.
+[v1.22.0...5aba68c](https://github.com/cri-o/cri-o/compare/v1.22.0...5aba68c31a81454b2f00cb5414817606bd2b66c0) on Wed, 12 Jan 2022 17:41:43 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f97e462d3d0d2be14071ed6ad4456bfb59ca2787.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f97e462d3d0d2be14071ed6ad4456bfb59ca2787.tar.gz)
-- [cri-o.arm64.f97e462d3d0d2be14071ed6ad4456bfb59ca2787.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f97e462d3d0d2be14071ed6ad4456bfb59ca2787.tar.gz)
+- [cri-o.amd64.5aba68c31a81454b2f00cb5414817606bd2b66c0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5aba68c31a81454b2f00cb5414817606bd2b66c0.tar.gz)
+- [cri-o.arm64.5aba68c31a81454b2f00cb5414817606bd2b66c0.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5aba68c31a81454b2f00cb5414817606bd2b66c0.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -44,6 +41,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
 
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
+
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
 
@@ -51,6 +51,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add a [crio.stats] table to the config for configuring all things stats-related.
   Add ability (with config field StatsCollectionPeriod) to calculate and save stats for pods and containers, rather than return them on demand.
   Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
  - Add support for TARGET namespace mode, which enables support for ephemeral containers. ([#5440](https://github.com/cri-o/cri-o/pull/5440), [@haircommander](https://github.com/haircommander))
