--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,21 +18,18 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...dc37296](https://github.com/cri-o/cri-o/compare/v1.22.0...dc372964e754bcb5e8cfe988660d9076f8ee2753) on Wed, 12 Jan 2022 22:59:20 UTC.
+[v1.22.0...9c23ef3](https://github.com/cri-o/cri-o/compare/v1.22.0...9c23ef33858b7c0557119a8697812869e3cc2b38) on Thu, 13 Jan 2022 16:53:59 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.dc372964e754bcb5e8cfe988660d9076f8ee2753.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.dc372964e754bcb5e8cfe988660d9076f8ee2753.tar.gz)
-- [cri-o.arm64.dc372964e754bcb5e8cfe988660d9076f8ee2753.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.dc372964e754bcb5e8cfe988660d9076f8ee2753.tar.gz)
+- [cri-o.amd64.9c23ef33858b7c0557119a8697812869e3cc2b38.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9c23ef33858b7c0557119a8697812869e3cc2b38.tar.gz)
+- [cri-o.arm64.9c23ef33858b7c0557119a8697812869e3cc2b38.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9c23ef33858b7c0557119a8697812869e3cc2b38.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
-
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
@@ -43,6 +40,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
@@ -89,6 +89,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5541](https://github.com/cri-o/cri-o/pull/5541), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
  - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
  - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
