Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...74583d2](https://github.com/cri-o/cri-o/compare/v1.22.0...74583d26406963ba150004f343bc36c16a861164) on Mon, 17 Jan 2022 09:04:29 UTC.
+[v1.22.0...3d39dc3](https://github.com/cri-o/cri-o/compare/v1.22.0...3d39dc3a68e16fc4ba06d211f965da23883c5774) on Tue, 18 Jan 2022 10:17:27 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.74583d26406963ba150004f343bc36c16a861164.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.74583d26406963ba150004f343bc36c16a861164.tar.gz)
-- [cri-o.arm64.74583d26406963ba150004f343bc36c16a861164.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.74583d26406963ba150004f343bc36c16a861164.tar.gz)
+- [cri-o.amd64.3d39dc3a68e16fc4ba06d211f965da23883c5774.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3d39dc3a68e16fc4ba06d211f965da23883c5774.tar.gz)
+- [cri-o.arm64.3d39dc3a68e16fc4ba06d211f965da23883c5774.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3d39dc3a68e16fc4ba06d211f965da23883c5774.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -91,6 +91,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
+ - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
  - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
  - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
 
