Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...131b3e1](https://github.com/cri-o/cri-o/compare/v1.22.0...131b3e10f6d6550e651b980b5f148560e200d3c7) on Tue, 18 Jan 2022 15:49:24 UTC.
+[v1.22.0...62676b3](https://github.com/cri-o/cri-o/compare/v1.22.0...62676b3be50243ae16e0c776465919fe204fa389) on Tue, 18 Jan 2022 19:19:15 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.131b3e10f6d6550e651b980b5f148560e200d3c7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.131b3e10f6d6550e651b980b5f148560e200d3c7.tar.gz)
-- [cri-o.arm64.131b3e10f6d6550e651b980b5f148560e200d3c7.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.131b3e10f6d6550e651b980b5f148560e200d3c7.tar.gz)
+- [cri-o.amd64.62676b3be50243ae16e0c776465919fe204fa389.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.62676b3be50243ae16e0c776465919fe204fa389.tar.gz)
+- [cri-o.arm64.62676b3be50243ae16e0c776465919fe204fa389.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.62676b3be50243ae16e0c776465919fe204fa389.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -80,6 +80,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
+ - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
