--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,20 +13,21 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...936ed81](https://github.com/cri-o/cri-o/compare/v1.22.0...936ed819cd27cb66e519c3f14bb07145ee7765d1) on Tue, 18 Jan 2022 18:47:09 UTC.
+[v1.22.0...ac40287](https://github.com/cri-o/cri-o/compare/v1.22.0...ac40287dca1341526250362092e6441e09dc47d5) on Wed, 19 Jan 2022 13:43:50 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.936ed819cd27cb66e519c3f14bb07145ee7765d1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.936ed819cd27cb66e519c3f14bb07145ee7765d1.tar.gz)
-- [cri-o.arm64.936ed819cd27cb66e519c3f14bb07145ee7765d1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.936ed819cd27cb66e519c3f14bb07145ee7765d1.tar.gz)
+- [cri-o.amd64.ac40287dca1341526250362092e6441e09dc47d5.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ac40287dca1341526250362092e6441e09dc47d5.tar.gz)
+- [cri-o.arm64.ac40287dca1341526250362092e6441e09dc47d5.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ac40287dca1341526250362092e6441e09dc47d5.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
 #### Feature
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5547](https://github.com/cri-o/cri-o/pull/5547), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled
   Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5403](https://github.com/cri-o/cri-o/pull/5403), [@haircommander](https://github.com/haircommander))
 
