Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...0a49161](https://github.com/cri-o/cri-o/compare/v1.22.0...0a49161430815e5e64c4fe568588f63640827859) on Tue, 18 Jan 2022 21:35:50 UTC.
+[v1.22.0...1079759](https://github.com/cri-o/cri-o/compare/v1.22.0...1079759ce628b02d987a8ff96121eca0e6b27345) on Fri, 21 Jan 2022 05:00:34 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.0a49161430815e5e64c4fe568588f63640827859.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0a49161430815e5e64c4fe568588f63640827859.tar.gz)
-- [cri-o.arm64.0a49161430815e5e64c4fe568588f63640827859.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0a49161430815e5e64c4fe568588f63640827859.tar.gz)
+- [cri-o.amd64.1079759ce628b02d987a8ff96121eca0e6b27345.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1079759ce628b02d987a8ff96121eca0e6b27345.tar.gz)
+- [cri-o.arm64.1079759ce628b02d987a8ff96121eca0e6b27345.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1079759ce628b02d987a8ff96121eca0e6b27345.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -51,6 +51,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add a [crio.stats] table to the config for configuring all things stats-related.
   Add ability (with config field StatsCollectionPeriod) to calculate and save stats for pods and containers, rather than return them on demand.
   Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
  - Add support for TARGET namespace mode, which enables support for ephemeral containers. ([#5440](https://github.com/cri-o/cri-o/pull/5440), [@haircommander](https://github.com/haircommander))
@@ -79,6 +80,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
+ - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5529](https://github.com/cri-o/cri-o/pull/5529), [@haircommander](https://github.com/haircommander))
  - Fixed `contrib/metrics-exporter/cluster.yaml` for `kubectl create`. ([#5286](https://github.com/cri-o/cri-o/pull/5286), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
@@ -89,10 +91,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
- - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5541](https://github.com/cri-o/cri-o/pull/5541), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
+ - Changes default config output to comment default values instead of omitting them ([#5007](https://github.com/cri-o/cri-o/pull/5007), [@wgahnagl](https://github.com/wgahnagl))
  - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
- - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5550](https://github.com/cri-o/cri-o/pull/5550), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
 
 ## Dependencies
@@ -158,6 +159,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/onsi/ginkgo: [v1.16.4 → v1.16.5](https://github.com/onsi/ginkgo/compare/v1.16.4...v1.16.5)
 - github.com/onsi/gomega: [v1.16.0 → v1.17.0](https://github.com/onsi/gomega/compare/v1.16.0...v1.17.0)
 - github.com/opencontainers/image-spec: [083f635 → 5ad6f50](https://github.com/opencontainers/image-spec/compare/083f635...5ad6f50)
+- github.com/opencontainers/runc: [v1.0.2 → v1.0.3](https://github.com/opencontainers/runc/compare/v1.0.2...v1.0.3)
 - github.com/opencontainers/selinux: [v1.8.4 → v1.9.1](https://github.com/opencontainers/selinux/compare/v1.8.4...v1.9.1)
 - github.com/prometheus/common: [v0.29.0 → v0.30.0](https://github.com/prometheus/common/compare/v0.29.0...v0.30.0)
 - github.com/prometheus/procfs: [v0.6.0 → v0.7.3](https://github.com/prometheus/procfs/compare/v0.6.0...v0.7.3)
