Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...1079759](https://github.com/cri-o/cri-o/compare/v1.22.0...1079759ce628b02d987a8ff96121eca0e6b27345) on Fri, 21 Jan 2022 05:00:34 UTC.
+[v1.22.0...f6b1b3c](https://github.com/cri-o/cri-o/compare/v1.22.0...f6b1b3c6bea3ad46edbe5a46cd3f961e8e29e38d) on Fri, 21 Jan 2022 20:16:41 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1079759ce628b02d987a8ff96121eca0e6b27345.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1079759ce628b02d987a8ff96121eca0e6b27345.tar.gz)
-- [cri-o.arm64.1079759ce628b02d987a8ff96121eca0e6b27345.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1079759ce628b02d987a8ff96121eca0e6b27345.tar.gz)
+- [cri-o.amd64.f6b1b3c6bea3ad46edbe5a46cd3f961e8e29e38d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f6b1b3c6bea3ad46edbe5a46cd3f961e8e29e38d.tar.gz)
+- [cri-o.arm64.f6b1b3c6bea3ad46edbe5a46cd3f961e8e29e38d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f6b1b3c6bea3ad46edbe5a46cd3f961e8e29e38d.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -48,6 +48,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Feature
+ - Add `allowed_devices` field to config, allowing admins to specify which devices are allowed to be specified in the "io.kubernetes.cri-o.Devices" allowed_annotation. The default for this config field is [/dev/fuse] ([#5551](https://github.com/cri-o/cri-o/pull/5551), [@haircommander](https://github.com/haircommander))
  - Add a [crio.stats] table to the config for configuring all things stats-related.
   Add ability (with config field StatsCollectionPeriod) to calculate and save stats for pods and containers, rather than return them on demand.
   Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
