Update release notes

--- a/v1.21.4.md
+++ b/v1.21.4.md
@@ -12,20 +12,21 @@
 # CRI-O v1.21.4
 
 The release notes have been generated for the commit range
-[v1.21.3...50eca9f](https://github.com/cri-o/cri-o/compare/v1.21.3...50eca9f56c3b7451226184ea7d0999b1e4a5828d) on Fri, 21 Jan 2022 10:56:15 UTC.
+[v1.21.3...aebb17b](https://github.com/cri-o/cri-o/compare/v1.21.3...aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f) on Fri, 21 Jan 2022 20:32:58 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.50eca9f56c3b7451226184ea7d0999b1e4a5828d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.50eca9f56c3b7451226184ea7d0999b1e4a5828d.tar.gz)
-- [cri-o.arm64.50eca9f56c3b7451226184ea7d0999b1e4a5828d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.50eca9f56c3b7451226184ea7d0999b1e4a5828d.tar.gz)
+- [cri-o.amd64.aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f.tar.gz)
+- [cri-o.arm64.aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.aebb17b9285b6f8100c2e5aa1509dd8bc6414f6f.tar.gz)
 
 ## Changelog since v1.21.3
 
 ### Changes by Kind
 
 #### Feature
+ - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5557](https://github.com/cri-o/cri-o/pull/5557), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled
   Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5406](https://github.com/cri-o/cri-o/pull/5406), [@haircommander](https://github.com/haircommander))
 
