Update release notes

--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...ac40287](https://github.com/cri-o/cri-o/compare/v1.22.0...ac40287dca1341526250362092e6441e09dc47d5) on Wed, 19 Jan 2022 13:43:50 UTC.
+[v1.22.0...9746add](https://github.com/cri-o/cri-o/compare/v1.22.0...9746add0730aa34b0830a599fefe9404bed46626) on Mon, 24 Jan 2022 15:17:06 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ac40287dca1341526250362092e6441e09dc47d5.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ac40287dca1341526250362092e6441e09dc47d5.tar.gz)
-- [cri-o.arm64.ac40287dca1341526250362092e6441e09dc47d5.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ac40287dca1341526250362092e6441e09dc47d5.tar.gz)
+- [cri-o.amd64.9746add0730aa34b0830a599fefe9404bed46626.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9746add0730aa34b0830a599fefe9404bed46626.tar.gz)
+- [cri-o.arm64.9746add0730aa34b0830a599fefe9404bed46626.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9746add0730aa34b0830a599fefe9404bed46626.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -34,6 +34,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Fix a segfault if a workload is configured without the resources table ([#5486](https://github.com/cri-o/cri-o/pull/5486), [@haircommander](https://github.com/haircommander))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
+ - Fix bug where `ip a` reports `Error: Peer netns reference is invalid` ([#5558](https://github.com/cri-o/cri-o/pull/5558), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Do not log on startup if Intel RDT is not supported. ([#5298](https://github.com/cri-o/cri-o/pull/5298), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
